# EAF

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  dir_000002_000003.html  dir_000002_000008.html  dir_000002_000009.html  dir_000003_000009.html  dir_000005_000000.html  dir_000006_000000.html  dir_000006_000007.html  dir_000007_000000.html  dir_000008_000009.html  dir_6ba42400e8100fbe26a49987759693fc.html  dir_6ba42400e8100fbe26a49987759693fc.js  dir_6ba42400e8100fbe26a49987759693fc_dep.map  dir_6ba42400e8100fbe26a49987759693fc_dep.md5  dir_755c23231b0a9c73cf952b2baf6285f4.html  dir_755c23231b0a9c73cf952b2baf6285f4.js  dir_7f5819d1b26890235702743ada2334c6.html  dir_7f5819d1b26890235702743ada2334c6.js  dir_7f5819d1b26890235702743ada2334c6_dep.map  dir_7f5819d1b26890235702743ada2334c6_dep.md5  dir_919ccfb3784161fbf6244af743a8700b.html  dir_919ccfb3784161fbf6244af743a8700b.js  dir_919ccfb3784161fbf6244af743a8700b_dep.map  dir_919ccfb3784161fbf6244af743a8700b_dep.md5  dir_a8b9556896a6ccabdf0e9aa1c908e299.html  dir_a8b9556896a6ccabdf0e9aa1c908e299.js  dir_a8b9556896a6ccabdf0e9aa1c908e299_dep.map  dir_a8b9556896a6ccabdf0e9aa1c908e299_dep.md5  dir_ac95f541befb9a38170adf4ae09f67d3.html  dir_ac95f541befb9a38170adf4ae09f67d3.js  dir_ac95f541befb9a38170adf4ae09f67d3_dep.map  (+387 more)
.github/workflows/: codeql-analysis.yml  coverity-analysis.yml  doxygen.yml  nightly_coverity.yml
ci/: build.bat  build.sh  upload_coverage.sh
cmake/: CodeCoverage.cmake  FindLibUV.cmake
include/EAF/: eaf.h
include/EAF/core/: load.h  message.h  rpc.h  service.h
include/EAF/core/internal/: service.h
include/EAF/filber/: filber.h  stack.h
include/EAF/filber/internal/: jmpbuf.h  service.h  stack.h
include/EAF/infra/: lock.h  semaphore.h  thread.h
include/EAF/plugin/: plugin.h
include/EAF/plugin/detail/: msg.h
include/EAF/utils/: annotations.h  define.h  errno.h  list.h  log.h  map.h  map_low.h  ringbuffer.h
include/eaf/: eaf.h
include/eaf/core/: message.h  rpc.h  service.h
include/eaf/core/internal/: service.h
include/eaf/infra/: lock.h  semaphore.h  thread.h
include/eaf/utils/: annotations.h  define.h  errno.h  list.h  map.h  map_low.h
powerpack/: CMakeLists.txt
powerpack/include/EAF/: powerpack.h
powerpack/include/EAF/powerpack/: define.h  message.h  net.h  ringbuffer.h  timer.h
powerpack/include/eaf/: powerpack.h
powerpack/include/eaf/powerpack/: define.h  hash.h  iocp.h  log.h  message.h  monitor.h  net.h  random.h  regex.h  ringbuffer.h  string.h  time.h  timer.h  watchdog.h
powerpack/src/: powerpack.c  powerpack.h
powerpack/src/powerpack/: hash.c  hash.h  log.c  log.h  message.c  message.h  monitor.c  monitor.h  net.c  net.h  random.c  random.h  regex.c  regex.h  ringbuffer.c  string.c  string.h  time.c  time.h  timer.c  timer.h  watchdog.c  watchdog.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  functions_0.js  groups_0.js  (+37 more)
src/arch/: eaf_setjmp.h  eaf_stackcall.h
src/arch/aarch64/: asm_eaf_jmpbuf.h  asm_eaf_longjmp.S  asm_eaf_setjmp.S  asm_eaf_stackcall.S
src/arch/arm/: asm_eaf_jmpbuf.h  asm_eaf_longjmp.S  asm_eaf_setjmp.S  asm_eaf_stackcall.S
src/arch/i386/: asm_eaf_jmpbuf.h  asm_eaf_longjmp.S  asm_eaf_setjmp.S
src/arch/x86/: asm_eaf_jmpbuf.h  asm_eaf_longjmp.S  asm_eaf_setjmp.S  asm_eaf_stackcall.S
src/arch/x86_64/: asm_eaf_jmpbuf.h  asm_eaf_longjmp.S  asm_eaf_setjmp.S  asm_eaf_stackcall.S
src/compat/: lock.h  mutex.h  semaphore.h  thread.h
src/compat/linux/: c_hread.c  c_lock.c  c_lock.h  c_mutex.c  c_mutex.h  c_semaphore.c  c_semaphore.h  c_thread.c  c_thread.h  s_semaphore.c  s_thread.c  s_thread.h
src/compat/win32/: c_lock.c  c_lock.h  c_mutex.c  c_mutex.h  c_semaphore.c  c_semaphore.h  c_thread.c  c_thread.h  s_semaphore.c  s_semaphore.h  s_thread.c  s_thread.h
src/core/: message.c  message.h  service.c  service.h
src/filber/: jmpbuf.c
src/infra/: lock.c  semaphore.c  thread.c
src/plugin/: plugin.c  plugin.h
src/plugin/msg/: msg.c  msg.h
src/utils/: errno.c  errno.h  list.c  log.c  map.c  map_low.c  memory.h  ringbuffer.c
test/: CMakeLists.txt  Doxyfile
test/include/: TEST.h
test/include/ctest/: ctest.h
test/include/etest/: etest.h
test/src/: TEST.c  ctest.c  etest.c  main.c  main.cpp  quick.c  quick.h  quick2.c  quick2.h
test/src/cases/: benchmark.yield.c  filber.c  plugin.msg.c  send_event.c  send_request.c  service.filber.c  service.send_event.c  service.send_request.c  service.stack_call_normal.c  service.stack_call_yield.c  service.subscribe.c  stack_call_normal.c  stack_call_yield.c
test/src/cases/service/: send_event.c  send_request.c  stack_call_yield.c  subscribe.c
test/src/eaf/: benchmark.yield.c  core.message.c  core.service.hook.on_message_send_before.c  core.service.hook.on_service_yield.c  core.service.send_request.c  core.service.teardown.c  errno.c  hook.c  hook.on_message_after.c  hook.on_message_before.c  hook.on_message_dst_not_found.c  hook.on_message_handle_after.c  hook.on_message_handle_before.c  hook.on_message_send.c  hook.on_message_send_before.c  hook.on_service_yield.c  infra.thread.c  list.c  map.c  message.c  rpc.c  service.filber.c  service.lazyload.c  service.send_event.c  service.send_request.c  service.subscribe.c  thread.c  utils.errno.c
test/src/powerpack/: benchmark.message.c  hash.c  message.c  monitor.c  random.c  regex.c  ringbuffer.c  string.c  time.c  timer.c  watchdog.c
test/src/utils/: dial.c  dial.h
